update swagger info, add tags for swagger_auto_schema
Issue-ID: MODELING-221
